2001-04-10  Ulrich Drepper  <drepper@redhat.com>

	* ctype/ctype_l.c: Fix definitions of __tolower_l and __toupper_l.
	Reported by Konstantin Osipov <rabid@spylog.ru>.

	* sysdeps/i386/fpu/libm-test-ulps: Add deltas for tgamma to help
	the lousy AMD FPU.

2001-04-10  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/unix/sysv/linux/powerpc/sys/ptrace.h: New file.
	* sysdeps/unix/sysv/linux/powerpc/Dist: Add sys/ptrace.h.
	* sysdeps/unix/sysv/linux/powerpc/sys/ucontext.h: Delete wrong stuff.
	* sysdeps/unix/sysv/linux/powerpc/sys/procfs.h: Correct typedefs.

2001-04-10  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-deps.c (_dl_map_object_deps): Provide complete error
	message.  Based on a patch by HJ Lu.

2001-04-10  Andreas Schwab  <schwab@suse.de>

	* math/libm-test.inc (csinh_test): Don't require the invalid
	exception for csinh (x + iNaN), but make it optional.

2001-04-09  David Mosberger  <davidm@hpl.hp.com>

	* sysdeps/ia64/elf/start.S (_start): Add unwind directives.

	* sysdeps/generic/entry.h [!__ASSEMBLY__]: Declare _start.
	* sysdeps/ia64/elf/entry.h: New file.
	* sysdeps/unix/sysv/linux/mips/entry.h [!__ASSEMBLY__]: Declare
	__start.
	* elf/rtld.c: Don't declare ENTRY_POINT.  Use ENTRY_POINT instead
	of &ENTRY_POINT.
	* sysdeps/generic/dl-sysdep.c: Likewise.
	* sysdeps/mach/hurd/dl-sysdep.c: Likewise.
	* sysdeps/ia64/elf/start.S: Save base address of register backing
	store in __libc_ia64_register_backing_store_base.

2001-04-10  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/getcontext.S: Fix return
	value of getcontext.
	* sysdeps/unix/sysv/linux/s390/s390-64/getcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/setcontext.S: Fix return
	value of setcontext.
	* sysdeps/unix/sysv/linux/s390/s390-64/setcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/s390/swapcontext.c: Skip setcontext
	call by changing the saved context.

2001-04-10  Ulrich Drepper  <drepper@redhat.com>
